# url-shortener

./: .gitignore  Dockerfile  README.md  pyproject.toml
.env-dir/: example.env
accounts/: admin.py  manager.py  models.py
accounts/migrations/: 0001_initial.py
config/: settings.py  urls.py
shortify/: apps.py  cache.py  models.py  serializers.py  settings.py  urls.py  utils.py  views.py
shortify/migrations/: 0001_initial.py  0002_alter_shortlink_url.py
shortify/urls/: __init__.py  api.py
